# lerobot_TG620-train

./: .gitignore  .gitmodules  README.md  TG620_LeRobot_Integration_Notes.md
TG_Robot/: MUJOCO_LOG.TXT
TG_Robot/autoinstall_script/: How_to_startup.md  fish_install.yaml  install.sh  joint_traj_log.txt  spline_points.txt  start_working.sh  startup.sh  trajectory_points.txt
TG_Robot/autoinstall_script/config/: a1.txt
TG_Robot/autoinstall_script/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
TG_Robot/autoinstall_script/log/: latest_build
TG_Robot/example/example_cpp/: CMakeLists.txt
TG_Robot/example/example_cpp/include/example_cpp/: arm.hpp
TG_Robot/example/example_cpp/src/: example.cpp  motor_pub.cpp
TG_Robot/example/example_py/: package.xml  setup.py
TG_Robot/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
TG_Robot/install/arm380_config/share/arm380_config/: .setup_assistant  local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
TG_Robot/install/arm620_config/share/arm620_config/: .setup_assistant  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
TG_Robot/install/example_cpp/lib/example_cpp/: example  motor_pub
TG_Robot/install/example_cpp/share/example_cpp/: package.sh
TG_Robot/install/example_py/lib/example_py/: example
TG_Robot/install/example_py/share/example_py/: package.sh
TG_Robot/install/motor_control_logger/lib/motor_control_logger/: data_logger_node
TG_Robot/install/motor_control_logger/share/motor_control_logger/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
TG_Robot/install/robot_bringup/share/robot_bringup/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
TG_Robot/install/robot_control/lib/robot_control/: robot_control
TG_Robot/install/robot_control/share/robot_control/: package.sh
TG_Robot/install/robot_description/share/robot_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
TG_Robot/install/robot_driver/include/: can_receiver_driver.hpp
TG_Robot/install/robot_dynamics/share/robot_dynamics/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
TG_Robot/install/robot_dynamics/share/robot_dynamics/launch/: gravity_arm380.launch.py  gravity_arm620.launch.py
TG_Robot/install/robot_sdk/include/: robot_sdk.h
TG_Robot/log/: latest_build  latest_list
TG_Robot/src/motor_control_logger/: CMakeLists.txt  package.xml
TG_Robot/src/motor_control_logger/src/: data_logger_node.cpp
TG_Robot/src/robot_bringup/: CMakeLists.txt
TG_Robot/src/robot_bringup/launch/: arm380_real.launch.py  arm620_real.launch.py  robot_gazebo.launch.py  robot_gazebo_lerobot.launch.py  robot_mujoco_lerobot.launch.py  robot_real.launch.py
TG_Robot/src/robot_config/arm380_config/: CMakeLists.txt
TG_Robot/src/robot_config/arm620_config/: CMakeLists.txt
TG_Robot/src/robot_control/: CMakeLists.txt  package.xml
TG_Robot/src/robot_control/include/robot_control/: cubic_spline.h  robot_control.h
TG_Robot/src/robot_control/launch/: robot_control.launch.py
TG_Robot/src/robot_control/src/: cubic_spline.cpp  robot_control.cpp
TG_Robot/src/robot_description/: CMakeLists.txt
TG_Robot/src/robot_description/arm620/: arm620.urdf.xacro
TG_Robot/src/robot_description/launch/: arm380_display.launch.py  arm620_display.launch.py  robot_description.launch.py
TG_Robot/src/robot_description/urdf/: arm380.urdf  arm380_gazebo.urdf  arm620.urdf  arm6202.urdf  arm620_with_omnipicker.urdf  dual_arm_with_omnipicker.urdf  dual_arm_with_pgc.urdf
TG_Robot/src/robot_driver/: CMakeLists.txt
TG_Robot/src/robot_driver/include/: can_gripper.hpp  can_sender_driver.hpp  common_defs.hpp  robot_can_driver.hpp  robot_can_node.hpp
TG_Robot/src/robot_driver/launch/: robot_driver.launch.py
TG_Robot/src/robot_driver/src/: can_receiver_driver.cpp  can_sender_driver.cpp  robot_can_driver.cpp  robot_can_node.cpp  robot_traj_control.cpp
TG_Robot/src/robot_dynamics/: setup.cfg  setup.py
TG_Robot/src/robot_dynamics/robot_dynamics/: gravity_compensator.py
TG_Robot/src/robot_gazebo/: CMakeLists.txt  package.xml
TG_Robot/src/robot_gazebo/config/: gazebo_arm380.urdf.xacro  gazebo_arm620.urdf.xacro  gazebo_arm620_lerobot.urdf.xacro
TG_Robot/src/robot_gazebo/launch/: robot_gazebo.launch.py  robot_gazebo_lerobot.launch.py
TG_Robot/src/robot_gazebo/worlds/: arm620_grasp.world
TG_Robot/src/robot_input/: package.xml  setup.cfg  setup.py
TG_Robot/src/robot_input/keyboard/: key_mappings.py
TG_Robot/src/robot_input/test/: test_tcp_server.py
TG_Robot/src/robot_interfaces/: CMakeLists.txt
TG_Robot/src/robot_interfaces/msg/: ArmState.msg  GripperControl.msg  KeyPressedAction.msg  LineMsg.msg  StateAction.msg
TG_Robot/src/robot_sdk/: CMakeLists.txt
TG_Robot/src/robot_sdk/include/: robot_key_controller.h
TG_Robot/src/robot_sdk/src/: robot_sdk.cpp
TG_Robot/src/robot_state_machine/: CMakeLists.txt
TG_Robot/src/robot_state_machine/include/robot_state_machine/: robot_joint_recorder.hpp  robot_kinematics.hpp  robot_state_machine.hpp
TG_Robot/src/robot_state_machine/src/: robot_joint_recorder.cpp  robot_kinematics.cpp  robot_state_machine.cpp
TG_Robot/src/robot_state_machine/test/: test_generate_joint_velocity_command.cpp
TG_Robot/src/robot_test_py/: package.xml  setup.cfg  setup.py
TG_Robot/src/robot_test_py/robot_test_py/: robot_test_py.py.bk
TG_Robot/src/tg_lerobot_bridge/: package.xml  setup.cfg  setup.py
TG_Robot/src/tg_lerobot_bridge/launch/: mujoco_sim.launch.py  sim_bridges.launch.py
TG_Robot/src/tg_lerobot_bridge/models/: arm620_omnipicker_mujoco.xml
TG_Robot/src/tg_lerobot_bridge/tg_lerobot_bridge/: gripper_scan_node.py  mujoco_sim_node.py  sim_control_bridge_node.py
TG_Robot/src/traj_smoother_py/: setup.cfg  setup.py
TG_Robot/src/traj_smoother_py/launch/: traj_smoother.launch.py
TG_Robot/src/traj_smoother_py/traj_smoother_py/: smoother_node.py
(+329 files in other folders)
