<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_dynamics</name>
  <version>0.0.0</version>
  <description>Robot dynamics calculations including gravity compensation and Jacobian computation</description>
  <maintainer email="18392676225@163.com">zwh</maintainer>
  <license>TODO: License declaration</license>

  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-pinocchio</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
